# VEX-Change-Up

./: .clang-format  .clang-tidy  .clangd  .gitignore  README.md  common.mk  project.pros  raidzero.c
.github/workflows/: ci.yml
include/: autonomous.hpp  constants.hpp  gui.hpp  main.h  opcontrol.hpp  robot.hpp
include/builder/: asyncRamsetePathControllerBuilder.hpp
include/controller/: asyncRamsetePathController.hpp  customOdomChassisController.hpp  motorController.hpp  ramseteController.hpp
include/controller/util/: ramseteUtil.hpp
include/geometry/: pose2d.hpp  rotation2d.hpp  transform2d.hpp  translation2d.hpp
include/kinematics/: kinematics.hpp
include/libraidzero/: api.hpp
include/libraidzero/action/: asyncAction.hpp
include/libraidzero/builder/: advancedChassisControllerBuilder.hpp  asyncAdvancedProfileControllerBuilder.hpp  asyncRamsetePathControllerBuilder.hpp
include/libraidzero/controller/: advancedChassisController.hpp  advancedOdomChassisController.hpp  asyncAdvancedProfileController.hpp  asyncRamsetePathController.hpp  iodomController.hpp  mecanumController.hpp  mecanumOdomController.hpp  motorController.hpp  odomController.hpp  pidController.hpp  profiledPidController.hpp  purePursuitController.hpp  ramseteController.hpp  xOdomController.hpp
include/libraidzero/device/: betterIMU.hpp
include/libraidzero/filter/: slewRateLimiter.hpp
include/libraidzero/geometry/: pose2d.hpp  rotation2d.hpp  transform2d.hpp  translation2d.hpp
include/libraidzero/kinematics/: chassisSpeeds.hpp  driveWheelSpeeds.hpp  kinematics.hpp
include/libraidzero/odometry/: threeEncoderGyroOdometry.hpp  threeEncoderImuOdometry.hpp
include/libraidzero/pathing/: purePursuitPath.hpp
include/libraidzero/planner/: hermiteInterpolator.hpp  polynomialFunction.hpp  profilePlanner.hpp  profileStructs.hpp  trapezoidProfile.hpp
include/libraidzero/trajectory/: trajectory.hpp
include/libraidzero/util/: mathUtil.hpp  miscUtil.hpp  plotter.hpp  stateMachine.hpp  taskWrapper.hpp
include/robot/: conveyor.hpp  drive.hpp  intake.hpp
include/trajectory/: trajectory.hpp
plotter/: plotter.py
src/: autonomous.cpp  gui.cpp  main.cpp  opcontrol.cpp  robot.cpp
src/builder/: asyncRamsetePathControllerBuilder.cpp
src/controller/: asyncRamsetePathController.cpp  ramseteController.cpp
src/geometry/: pose2d.cpp  rotation2d.cpp  transform2d.cpp  translation2d.cpp
src/kinematics/: driveWheelSpeeds.cpp
src/libraidzero/action/: asyncAction.cpp
src/libraidzero/builder/: advancedChassisControllerBuilder.cpp  asyncAdvancedProfileControllerBuilder.cpp  asyncRamsetePathControllerBuilder.cpp
src/libraidzero/controller/: advancedChassisController.cpp  advancedOdomChassisController.cpp  asyncAdvancedProfileController.cpp  asyncRamsetePathController.cpp  (+9 more)
src/robot/: conveyor.cpp  drive.cpp  intake.cpp
src/trajectory/: trajectory.cpp
src/util/: miscUtil.cpp
test/: .gitignore  CMakeLists.txt
test/lib/: README.md
test/src/: testing.cpp
tests/: CMakeLists.txt  testing.cpp
visualization/MecanumStrafe/: MecanumController.pde  MecanumStrafe.pde  PIDController.java  Robot.pde
(+30 files in other folders)
